<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/gif"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_icon_alt"
            android:layout_margin="@dimen/min_margin"/>

        <TextView
            android:visibility="gone"
            style="@style/TextInputLayout"
            android:id="@+id/tittle"
            android:layout_below="@id/gif"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_slogan"/>
    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/main"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewHeader"
            android:text="@string/sign_in"
            android:layout_margin="@dimen/big_margin"/>
        <!--Alias-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/email"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputLayout"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:id="@+id/pass"
            android:hint="@string/pass">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputLayout"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/isUser"
                android:text="@string/user"/>

            <RadioButton
                style="@style/RadioButton"
                android:id="@+id/isBusiness"
                android:text="@string/business"/>
        </RadioGroup>
        <!--SingIn-->
        <Button
            style="@style/Button"
            android:id="@+id/signIn"
            android:text="@string/signIn"/>
        <!--SingUp-->
        <LinearLayout
            android:layout_margin="@dimen/med_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextInputLayout"
                android:id="@+id/signUp"
                android:text="@string/create_account"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>