<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_margin"
        android:orientation="vertical">

        <TextView
            style="@style/TextViewHeader"
            android:text="@string/menu_catalog"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/options"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            style="@style/TextInputLayout"
            android:id="@+id/available"
            android:layout_weight="1"
            android:text="@string/opt_available"
            android:background="@drawable/border_selected"/>

        <TextView
            style="@style/TextInputLayout"
            android:id="@+id/unavailable"
            android:layout_weight="1"
            android:text="@string/opt_unavailable"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lAvailable"
        android:layout_below="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAvailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lUnavailable"
        android:layout_below="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUnavailable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/container_message"
        style="@style/TextViewHeader"
        android:layout_height="match_parent"
        android:text="Validando productos y servicios..."/>
</RelativeLayout>