<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="@dimen/med_icon"
            android:layout_height="@dimen/med_icon"
            android:layout_margin="@dimen/min_margin"
            android:layout_centerVertical="true"/>

        <TextView
            style="@style/TextViewHeader"
            android:id="@+id/alias"
            android:layout_toStartOf="@id/settings"
            android:layout_toEndOf="@id/icon"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/settings"
            android:layout_alignParentEnd="true"
            android:layout_width="@dimen/med_icon"
            android:layout_height="@dimen/med_icon"
            android:layout_margin="@dimen/min_margin"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/_settings"/>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:visibility="invisible"
        android:layout_below="@+id/header"
        android:id="@+id/pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/min_margin"
        card_view:cardCornerRadius="@dimen/med_margin"
        card_view:cardElevation="0dp"
        card_view:cardBackgroundColor="@color/colorPrimary">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_icon_alt"
            android:layout_margin="@dimen/min_margin"/>
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:visibility="invisible"
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/min_margin">

            <View
                style="@style/ViewLine"/>

            <TextView
                style="@style/TextViewHeader"
                android:text="@string/personal_data"/>

            <TextView
                style="@style/TextInputLayout"
                android:id="@+id/owner"/>

            <TextView
                style="@style/TextInputLayout"
                android:id="@+id/email"/>

            <View
                style="@style/ViewLine"/>

            <TextView
                style="@style/TextViewHeader"
                android:text="@string/business_data"/>

            <!--Desc-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/businessDesc"
                android:hint="Descripción">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputLayout"
                    android:enabled="false"
                    android:inputType="textAutoCorrect"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Slogan-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/businessSlogan"
                android:hint="@string/slogan">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputLayout"
                    android:enabled="false"
                    android:inputType="textAutoCorrect"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Phone-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/businessPhone"
                android:hint="@string/phone">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputLayout"
                    android:enabled="false"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Address-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:id="@+id/businessAddress"
                android:hint="@string/address">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputLayout"
                    android:enabled="false"
                    android:inputType="textAutoCorrect"/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Schedule-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView"
                    android:text="Horarios:"/>

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSchedules"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>